--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,10 @@
+# Environment
+ENV=dev
+
 # Server
 HOST=127.0.0.1
 PORT=8000
+WEBHOOK_URL=<YOUR_WEBHOOK_URL>
+
+# Telegram
+BOT_TOKEN=<YOUR_BOT_TOKEN>
