add database connection

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,13 @@ WEBHOOK_URL=<YOUR_WEBHOOK_URL>
 
 # Telegram
 BOT_TOKEN=<YOUR_BOT_TOKEN>
+
+# PostgreSQL/MySQL
+DB_NAME=test_db
+DB_USER=test_user
+DB_PASSWORD=test_password
+DB_HOST=localhost
+DB_HORT=5432
+
+# SQLite
+DB_PATH=
