--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "fastapi (>=0.115.6,<0.116.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
-    "pytelegrambotapi (>=4.26.0,<5.0.0)"
+    "pytelegrambotapi (>=4.26.0,<5.0.0)",
+    "peewee (>=3.17.8,<4.0.0)"
 ]
 
 
