fix bot handlers

--- a/.env.template
+++ b/.env.template
@@ -12,7 +12,7 @@ BOT_TOKEN=<YOUR_BOT_TOKEN>
 # PostgreSQL/MySQL
 DB_NAME=test_db
 DB_USER=test_user
-DB_PASSWORD=test_password
+DB_PASSWORD=
 DB_HOST=localhost
 DB_HORT=5432
 
