--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "pytelegrambotapi (>=4.26.0,<5.0.0)",
-    "peewee (>=3.17.8,<4.0.0)"
+    "peewee (>=3.17.8,<4.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)"
 ]
 
 
