--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "pytelegrambotapi (>=4.26.0,<5.0.0)",
     "peewee (>=3.17.8,<4.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2 (>=2.9.10,<3.0.0)"
 ]
 
 
